# finradar-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  PERSONA.md  README.md  pyproject.toml  setup_finradar.py
runbooks/: buy-a-business.md  credit-check.md  fiduciary-ops.md  ma-target.md  owner-advisory.md  person-aggregate.md  prospecting.md  sector-benchmark.md  succession-keyperson.md  valuation.md
src/finradar_mcp/: __init__.py  server.py
