[project]
name = "finradar-mcp"
version = "0.1.0"
description = "MCP server to query FinRadar — financial intelligence on Belgian companies — from a Claude agent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FinRadar" }]
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.scripts]
finradar-mcp = "finradar_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finradar_mcp"]
